app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

BODY {
  margin: 0;
  font-family: 'NanumGothicWeb', gulim, sans-serif;
  font-size: 14px;
  color: #555555;
}

ul {
  list-style-type:none; 
  margin:0;
  padding:0
}

a {
  text-decoration: none;
  color: #0d76b8;
}


.message { color: #4889b3; }
.warning  { color: #e81e57; font-size:12px; }

.field_with_errors {
  display: block;
  clear: both;
}

#wrapper {
  width: 900px;
  margin: 0 auto;
}

#main_container {
  width:680px;
  float:right;
}

#header {
  width: 680px;
  height: 30px;
  margin: 50px 0 10px 0 ;
}

.header_title {
  color: #095e94;
  font-size: 20px;
  font-weight: bold;
}

.sidebar_container {
  width: 180px;
  float:left;
  margin-right:40px;
}

.sidebar {
  margin-top: 20px;
}

.sidebar_link_container {
  width: 130px;
  margin: 2px 0;
}

.sidebar_title {
  width:150px;
  margin:0 0 5px 30px;
  font-size: 12px;
  font-weight: bold;
  color: #666666;
}

.sidebar_link { 
  font-size: 13px;
}

.sidebar_option_link {
  color: #666666;
  font-size: 11px;
  font-weight: bold;
}

.new_posting_container {
  width:500px;
  height: 120px;
  border-top: 2px dotted #cccccc;
  border-bottom: 2px dotted #cccccc;
  margin-bottom: 15px;
}

#posting_error_message {
  height: 20px;
  margin: 2px 0;
}

.new_posting_form {
  margin-bottom: 20px;
}

.new_posting_textarea {
  width: 400px;
  height: 65px;
  padding: 2px;
}

.new_posting_submit_button {
  width: 65px;
  height: 65px;
  margin: 2px 15px 2px 0;
}

.posting_container {
  width:520px;
  border-bottom: 2px dotted #cccccc;
  margin-bottom: 15px;
}

.comment_container {
  width: 400px;
  background-color: #f1f8fd;
  font-size:12px;
}

.posting_author {
  color:#444444; 
  font-weight:bold; 
}

.comment_author {
  color:#555555; 
  font-weight:bold;
}

.content_date {
  color:#888888;
  font-size:9px;
}

.comment_main_section {
  padding-top: 2px;
  margin: 2px 0 3px 3px;
}

.posting_group {
  font-size:11px;
  font-weight: bold;
}

.posting_wall_link {
  color:#e01d4f;
}

.posting_content_container {
  margin: 10px 0;
}

.content_activity_bar { 
  font-size: 11px;
  margin-bottom: 5px;
  margin-left: 3px;
}

.posting_likes, .posting_get_more_comments_link {
  width:397px;
  height:18px;
  background-color:#f1f8fd;
  margin-bottom: 3px;
  padding-top:2px;
  padding-left:3px;
  font-size: 11px;
  color:#0d76b8;
}

.posting_new_comment_form {
  margin: 5px 0 15px 0;
}

.posting_comment_textarea {
  width: 392px;
  height: 16px;
  padding: 3px;
}

.placeholder { color: #888888; }

.center { margin: 0 auto; }
.float-left { float:left; }
.float-right { float:right; }

textarea {
  resize: none;
  overflow: auto;
  font-family: 'NanumGothicWeb', gulim, sans-serif;
  font-size: 14px;
}

input:not([type=submit]):not([type=file]):not([type=image]),textarea {
  border: 1px solid white;
  -moz-box-shadow: 0 0 5px #4889b3;
  -webkit-box-shadow: 0 0 5px #4889b3;
  box-shadow: 0 0 5px #4889b3;
  border-top-left-radius: 3px 6px;
  border-top-right-radius: 3px 6px;
  border-bottom-left-radius: 3px 6px;
  border-bottom-right-radius: 3px 6px;
}

input:focus {
  outline: none;
}

img { border-style: none; }

.form_fields {
  width:285px;
}

.form_submit {
  width:65px;
  height:65px;
  margin: 14px 0;
}

.signin_form_container {
  width:350px;
  height:130px;
  margin-top:5px;
}

